Update the css prevents layout issue.

--- a/apps/blogroll/assets/css/blogroll_layout.css
+++ b/apps/blogroll/assets/css/blogroll_layout.css
@@ -119,6 +119,8 @@
     font-weight: normal;
     font-size: 24px;
     margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #blogroll-list-container > .blogroll-card > .blogroll-card-text > p{
